--- a/style.css
+++ b/style.css
@@ -7,10 +7,15 @@ body {
 .container {
   display: flex;
   flex-wrap: wrap;
-  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  overflow: hidden;
 }
 
 .box {
-  width: 100px;
-  height: 100px;
+  width: 70px;
+  height: 70px;
+  background-color: aquamarine;
+  margin: 1px;
 }
