Make the sketch pad interactive by adding hover effect
add applyHoverEffect and removeHoverEffect function by listening to mouse over event and remove it after 0.5 sec

--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body {
 }
 
 .container {
+  width: 100%;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -14,8 +15,11 @@ body {
 }
 
 .box {
-  width: 70px;
+  width: 60px;
   height: 70px;
-  background-color: aquamarine;
   margin: 1px;
+}
+
+.hovering {
+  background-color: #ddd;
 }
